@@ -4,6 +4,7 @@
  - Add EXAMPLE to CSS::Struct::Output::Raw doc.
  - Fix bugtracker.
  - Rewrite CSS::Struct::Output to use =head2 in doc.
+ - Rewrite CSS::Struct::Output::Raw to use =head2 in doc.
 
 0.03 2020-08-11T15:50:26+02:00
  - Fix test dependencies.
